2022-01-19  Said Abou-Hallawa  <said@apple.com>

        [GPU Process] ImageBuffer::convertToLuminanceMask() and transformToColorSpace() should not access the backend in WebProcess
        https://bugs.webkit.org/show_bug.cgi?id=235305
        rdar://83437815

        Reviewed by Sam Weinig.

        * GPUProcess/graphics/RemoteDisplayListRecorder.cpp:
        (WebKit::RemoteDisplayListRecorder::convertToLuminanceMask):
        (WebKit::RemoteDisplayListRecorder::transformToColorSpace):
        * GPUProcess/graphics/RemoteDisplayListRecorder.h:
        * GPUProcess/graphics/RemoteDisplayListRecorder.messages.in:
        * WebProcess/GPU/graphics/RemoteDisplayListRecorderProxy.cpp:
        (WebKit::RemoteDisplayListRecorderProxy::convertToLuminanceMask):
        (WebKit::RemoteDisplayListRecorderProxy::transformToColorSpace):
        * WebProcess/GPU/graphics/RemoteDisplayListRecorderProxy.h:
        * WebProcess/GPU/graphics/RemoteImageBufferProxy.h:

2022-01-19  Chris Dumez  <cdumez@apple.com>

        WebsiteDataStore.cpp uses switch statements for WebKit::ProcessAccessType enum that fall through ASSERT_NOT_REACHED()
        https://bugs.webkit.org/show_bug.cgi?id=234986
        <rdar://problem/87272534>

        Reviewed by Darin Adler.

        Clean up / clarify processAccessType logic in WebsiteDataStore.cpp.

        * UIProcess/WebsiteData/WebsiteDataStore.cpp:
        (WebKit::computeNetworkProcessAccessTypeForDataFetch):
        (WebKit::computeWebProcessAccessTypeForDataFetch):
        (WebKit::WebsiteDataStore::fetchDataAndApply):
        (WebKit::computeNetworkProcessAccessTypeForDataRemoval):
        (WebKit::computeWebProcessAccessTypeForDataRemoval):
        (WebKit::WebsiteDataStore::removeData):

2022-01-19  Chris Dumez  <cdumez@apple.com>

        WebKit::AuthenticatorPresenterCoordinator() constructor falls through ASSERT_NOT_REACHED()
        https://bugs.webkit.org/show_bug.cgi?id=234991
        <rdar://problem/87275093>
