@@ -1,3 +1,14 @@
+2022-01-19  Chris Dumez  <cdumez@apple.com>
+
+        WebKit::nsTextAlignmentFromTextAlignment() falls through ASSERT_NOT_REACHED()
+        https://bugs.webkit.org/show_bug.cgi?id=234989
+        <rdar://problem/87273264>
+
+        Reviewed by Darin Adler.
+
+        * UIProcess/Cocoa/WebViewImpl.mm:
+        (WebKit::nsTextAlignmentFromTextAlignment):
+
 2022-01-19  Said Abou-Hallawa  <said@apple.com>
 
         [GPU Process] ImageBuffer::convertToLuminanceMask() and transformToColorSpace() should not access the backend in WebProcess
